--- a/app.yml
+++ b/app.yml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/ishubhoshaha/argocd.git
     targetRevision: HEAD
-    path: kubernetes
+    path: demo-app/flask-demo
     directory:
       recurse: true
   destination:
