--- a/demo-app/flask-demo/secret.yml
+++ b/demo-app/flask-demo/secret.yml
@@ -4,10 +4,6 @@ data:
   username: amFuZQ==
 kind: Secret
 metadata:
-  creationTimestamp: 2019-06-04T15:39:27Z
-  name: credentials
-  namespace: default
-  resourceVersion: "14507319"
-  selfLink: /api/v1/namespaces/default/secrets/credentials
-  uid: efce376b-86de-11e9-9742-42010a80022f
+  name: demo-credentials
+  namespace: flask-app
 type: Opaque
