--- a/demo-app/flask-demo/flask-app-config.yml
+++ b/demo-app/flask-demo/flask-app-config.yml
@@ -18,7 +18,7 @@ data:
     enemy.types=aliens,monsters
     player.maximum-lives=5    
   user-interface.properties: |
-    color.good=purple
+    color.good=pink
     color.bad=red
     allow.textmode=true    
 ---
