--- a/demo-app/flask-demo/flask-app-config.yml
+++ b/demo-app/flask-demo/flask-app-config.yml
@@ -8,6 +8,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: game-demo
+  namespace: flask-app
 data:
   # property-like keys; each key maps to a simple value
   player_initial_lives: "3"
